--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=i-mirror
+server.port=8080
+
+springdoc.swagger-ui.groups-order=desc
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.default-model-expand-depth=2
+springdoc.swagger-ui.default-models-expand-depth=2
+
+springdoc.api-docs.path=/api-docs
+springdoc.show-actuator=true
+springdoc.default-consumes-media-type=application/json
+springdoc.default-produces-media-type=application/json
+springdoc.writer-with-default-pretty-printer=true
+springdoc.model-and-view-allowed=true
+springdoc.paths-to-match=/api/**
