HELP, BUG EXIST

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=i-mirror
 server.port=8080
 
+spring.data.redis.host=13.125.31.54
+spring.data.redis.port=6379
+
 springdoc.swagger-ui.groups-order=desc
 springdoc.swagger-ui.tags-sorter=alpha
 springdoc.swagger-ui.operations-sorter=method
@@ -16,3 +19,5 @@ springdoc.default-produces-media-type=application/json
 springdoc.writer-with-default-pretty-printer=true
 springdoc.model-and-view-allowed=true
 springdoc.paths-to-match=/api/**
+
+#logging.level.root=DEBUG
