--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 spring.application.name=i-mirror
 server.port=8080
 
-spring.data.redis.host=13.125.31.54
-spring.data.redis.port=6379
-
 springdoc.swagger-ui.groups-order=desc
 springdoc.swagger-ui.tags-sorter=alpha
 springdoc.swagger-ui.operations-sorter=method
@@ -20,4 +17,5 @@ springdoc.writer-with-default-pretty-printer=true
 springdoc.model-and-view-allowed=true
 springdoc.paths-to-match=/api/**
 
+spring.config.import=classpath:database.properties, classpath:redis.properties
 #logging.level.root=DEBUG
