--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,11 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
 	implementation "org.springframework.boot:spring-boot-starter-data-redis"
+	implementation 'org.springframework.session:spring-session-data-redis'
+
+
+
+
 
 }
 
