--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=i-mirror
 server.port=8080
 
+
+#spring.jpa.hibernate.ddl-auto=create
+
 springdoc.swagger-ui.groups-order=desc
 springdoc.swagger-ui.tags-sorter=alpha
 springdoc.swagger-ui.operations-sorter=method
@@ -19,3 +22,6 @@ springdoc.paths-to-match=/api/**
 
 spring.config.import=classpath:database.properties, classpath:redis.properties
 #logging.level.root=DEBUG
+
+
+mirror.token=9kpFjwaC2wMT3x9plK1yYRubO776uQPsh6lo6AqbCd
